# Masgent

./: .gitignore  MEMO.md  README.md  README_PyPI.md  elastic_constants_orbv3.txt  pyproject.toml
examples/: KPOINTS_high  KPOINTS_medium  POSCAR_Al  POSCAR_Cu  POSCAR_GaAs  POSCAR_MgO  POSCAR_MoS2  POSCAR_Si  main.py  masgent_submit.sh  tools.py
examples/1. Density Functional Theory (DFT) Simulations/1.1 Structure Preparation & Manipulation/: POSCAR_NiO
examples/3. Simple Machine Learning for Materials Science/machine_learning/: ml_output_data.csv
examples/Density Functional Theory (DFT) Simulations/Structure Preparation & Manipulation/: POSCAR  POSCAR_La2NiO4  POSCAR_NaCl  POSCAR_TiO2
examples/Density Functional Theory (DFT) Simulations/VASP Input File Preparation/: KPOINTS_custom  KPOINTS_low  KPOINTS_monkhorst
examples/POSCARs/Al/: POSCAR_Cubic_Im-3m_mp-998860  POSCAR_Triclinic_P1_mp-1245067
examples/POSCARs/Cu/: POSCAR_Hexagonal_P6_3_mmc_mp-989782  POSCAR_Monoclinic_P2_m_mp-1056079  POSCAR_Trigonal_P-3m1_mp-1120774
examples/POSCARs/GaAs/: POSCAR_Cubic_F-43m_mp-2534  POSCAR_Cubic_Pa-3_mp-15619  POSCAR_Orthorhombic_Imm2_mp-603640  POSCAR_Tetragonal_I-4m2_mp-2362466  POSCAR_Tetragonal_P4_mmm_mp-10048  POSCAR_Triclinic_P1_mp-1244899  POSCAR_Triclinic_P1_mp-1245314
examples/POSCARs/La2NiO4/: POSCAR_Orthorhombic_Cmce_mp-20143  POSCAR_Tetragonal_P4_2_ncm_mp-21874
examples/POSCARs/LaCoO3/: POSCAR_Cubic_Pm-3m_mp-510611  POSCAR_Cubic_Pm-3m_mp-573180  POSCAR_Monoclinic_C2_c_mp-1180725  POSCAR_Orthorhombic_Imma_mp-1504268  POSCAR_Orthorhombic_Pnma_mp-1185232  POSCAR_Triclinic_P-1_mp-1277476  POSCAR_Triclinic_P-1_mp-561922  POSCAR_Triclinic_P1_mp-1272753  POSCAR_Trigonal_R-3_mp-1288145  POSCAR_Trigonal_R-3c_mp-19051
examples/POSCARs/MgO/: POSCAR_Cubic_Fm-3m_mp-1265  POSCAR_Cubic_Pm-3n_mp-1101930  POSCAR_Hexagonal_P-6m2_mp-1009129  POSCAR_Hexagonal_P6_3_mmc_mp-1065577  POSCAR_Hexagonal_P6_3_mmc_mp-1192189  POSCAR_Hexagonal_P6_3mc_mp-549706  POSCAR_Monoclinic_C2_c_mp-1191789  POSCAR_Orthorhombic_Ibam_mp-1180312  POSCAR_Orthorhombic_Ibam_mp-1192043  POSCAR_Triclinic_P1_mp-1244962  POSCAR_Triclinic_P1_mp-1245039  POSCAR_Triclinic_P1_mp-1245143  POSCAR_Triclinic_P1_mp-1245157
examples/POSCARs/MoS2/: POSCAR_Hexagonal_P-6m2_mp-1023924  POSCAR_Hexagonal_P-6m2_mp-1025874  POSCAR_Hexagonal_P6_3_mmc_mp-2815  POSCAR_Trigonal_P-3m1_mp-1023939  POSCAR_Trigonal_P-3m1_mp-1027525  POSCAR_Trigonal_P-3m1_mp-1238797  POSCAR_Trigonal_R-3m_mp-558544  POSCAR_Trigonal_R3m_mp-1434
examples/POSCARs/NiO/: POSCAR_Hexagonal_P6_mmm_mp-1180047
examples/POSCARs/Si/: POSCAR_Cubic_Fd-3m_mp-149  POSCAR_Cubic_Fd-3m_mp-16220  POSCAR_Cubic_Fm-3m_mp-27  POSCAR_Cubic_I-43m_mp-971661  POSCAR_Cubic_Im-3m_mp-1014212  POSCAR_Cubic_Pa-3_mp-1201492  POSCAR_Hexagonal_P6_3_mmc_mp-10649  POSCAR_Hexagonal_P6_3_mmc_mp-165  POSCAR_Monoclinic_C2_m_mp-1079297  POSCAR_Orthorhombic_Cmcm_mp-1204627  POSCAR_Orthorhombic_Cmcm_mp-2351841  POSCAR_Orthorhombic_Fmmm_mp-109  POSCAR_Orthorhombic_Fmmm_mp-1524805  POSCAR_Tetragonal_I4_1_amd_mp-92  POSCAR_Tetragonal_I4_mmm_mp-999200  POSCAR_Triclinic_P1_mp-1244933  POSCAR_Triclinic_P1_mp-1244990  POSCAR_Triclinic_P1_mp-1245041  POSCAR_Triclinic_P1_mp-644693  POSCAR_Triclinic_P1_mp-988210  POSCAR_Trigonal_R-3_mp-571520  POSCAR_Trigonal_R-3m_mp-1094057
examples/POSCARs/TiO2/: POSCAR_Cubic_Fd-3m_mp-25262  POSCAR_Cubic_Fm-3m_mp-1008677  POSCAR_Cubic_Pa-3_mp-1102591  POSCAR_Hexagonal_P6_3_mmc_mp-1445035  POSCAR_Hexagonal_P6_3mc_mp-756587  POSCAR_Monoclinic_C2_c_mp-34688  POSCAR_Monoclinic_Cm_mp-1350429  POSCAR_Monoclinic_P2_1_c_mp-430  POSCAR_Orthorhombic_Cmm2_mp-655656  POSCAR_Orthorhombic_Imma_mp-1041565  POSCAR_Orthorhombic_Pbcn_mp-1439  (+12 more)
examples/convert/: POSCAR.cif  POSCAR.xyz
examples/eos_calculations/: INCAR_temp  KPOINTS_temp  POSCAR_equilibrium  eos_fit.csv
examples/interface_maker/: interface_maker.csv
examples/neb_calculations/: INCAR  KPOINTS  vasp.out
examples/supercell/: POSCAR
examples/surface_slab/: OPEN_IN_BROWSER.html  POSCAR
examples/test/: a  b  c  d  e  f
src/masgent/: cli.py  schemas.py  tools.py  utils.py
src/vasp_agent/: cli.py  utils.py
(+967 files in other folders)
