[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masgent"
version = "1.0.4"
description = "Masgent: Materials Simulation Agent"
readme = "README.md"
authors = [{name = "Guangchen Liu", email = "gliu4@wpi.edu"}]
maintainers = [{name = "Guangchen Liu", email = "gliu4@wpi.edu"}]
keywords = ["AI agent", "Materials Science", "Computational Materials", "VASP", "ASE", "Pymatgen", "Machine Learning", "Machine Learning Potentials"]
license = {text = "MIT"}
requires-python = ">=3.9, <3.13"
dependencies = [
    "ase>=3.24.0",
    "numpy>=1.26.4",
    "pydantic_ai>=0.8.1",
    "pymatgen>=2024.10.3",
    "pymatgen-analysis-defects>=2025.9.26",
    "mp-api>=0.45.13",
    "dotenv>=0.9.9",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "bullet>=2.2.0",
    "yaspin>=3.3.0",
]

[tool.setuptools.package-data]
"masgent" = ["ai_mode/system_prompt.txt"]

[project.optional-dependencies]
dev = ["build", "twine"]
docs = []

[project.urls]
Homepage = "https://github.com/aguang5241/masgent"
Issues = "https://github.com/aguang5241/masgent/issues"
Documentation = "https://github.com/aguang5241/masgent"
Repository = "https://github.com/aguang5241/masgent"

[project.scripts]
masgent = "masgent.cli:main"