[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masgent"
version = "1.0.13"
description = "Masgent: Materials Simulation Agent"
readme = "README.md"
authors = [{name = "Guangchen Liu", email = "gliu4@wpi.edu"}]
maintainers = [{name = "Guangchen Liu", email = "gliu4@wpi.edu"}]
keywords = ["AI agent", "Materials Science", "Computational Materials", "VASP", "ASE", "Pymatgen", "Machine Learning", "Machine Learning Potentials"]
license = {text = "MIT"}
requires-python = ">=3.9, <3.13"
dependencies = [
    "ase",
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "pydantic_ai",
    "pymatgen",
    "pymatgen-analysis-defects",
    "mp-api",
    "dotenv",
    "colorama",
    "bullet",
    "yaspin",
    "icet",
    "sevenn",
    "chgnet",
]

[tool.setuptools.package-data]
"masgent" = ["ai_mode/system_prompt.txt"]

[project.optional-dependencies]
dev = ["build", "twine"]
docs = []

[project.urls]
Homepage = "https://github.com/aguang5241/masgent"
Issues = "https://github.com/aguang5241/masgent/issues"
Documentation = "https://github.com/aguang5241/masgent"
Repository = "https://github.com/aguang5241/masgent"

[project.scripts]
masgent = "masgent.cli:main"