[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masgent"
version = "1.1.5"
description = "Masgent: Materials Simulation Agent"
readme = "README_PyPI.md"
authors = [{name = "Guangchen Liu", email = "gliu4@wpi.edu"}]
maintainers = [{name = "Guangchen Liu", email = "gliu4@wpi.edu"}]
keywords = ["AI agent", "Materials Simulation", "Density Functional Theory", "Machine Learning Potentials", "Machine Learning"]
license = {text = "MIT"}
requires-python = ">=3.11, <3.14"
dependencies = [
    "ase",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "pydantic_ai",
    "pymatgen",
    "pymatgen-analysis-defects",
    "mp-api",
    "dotenv",
    "colorama",
    "bullet",
    "yaspin",
    "icet",
    "sevenn",
    "chgnet",
    "orb-models",
    "mattersim",
    "optuna",
]

[tool.setuptools.package-data]
"masgent" = [
    "ai_mode/system_prompt.txt", 
    "utils/ml_db_AlMgSiSc.pkl",
    "utils/ml_nn_AlMgSiSc.pkl",
    "utils/ml_nn_AlCoCrFeNi.pkl",
    "utils/ml_xs_AlMgSiSc.pkl",
    "utils/ml_xs_AlCoCrFeNi.pkl",
    "utils/ml_ys_AlMgSiSc.pkl",
    "utils/ml_ys_AlCoCrFeNi.pkl",
]

[project.optional-dependencies]
dev = ["build", "twine"]
docs = []

[project.urls]
Homepage = "https://github.com/aguang5241/masgent"
Issues = "https://github.com/aguang5241/masgent/issues"
Repository = "https://github.com/aguang5241/masgent"

[project.scripts]
masgent = "masgent.cli:main"